8189690: [mvt]Static fields support for Value Types is broken

Reviewed-by: dsimms